<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2021 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <me.zhanghai.android.files.ui.CoordinatorAppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorAppBarSurface"
        android:theme="?actionBarTheme"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/scrollView">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="?actionBarPopupTheme" />
    </me.zhanghai.android.files.ui.CoordinatorAppBarLayout>

    <me.zhanghai.android.files.ui.CoordinatorScrollingLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollIndicators="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/screen_edge_margin"
                    android:paddingEnd="@dimen/screen_edge_margin"
                    android:paddingTop="@dimen/screen_edge_margin"
                    android:paddingBottom="@dimen/screen_edge_margin_minus_16dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/hostLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_host"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hostEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textUri">
                            <requestFocus />
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/portLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_port"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_port_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/portEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/exportPathLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_export_path"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_export_path_placeholder"
                        app:helperText="@string/storage_edit_nfs_server_export_path_helper"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/exportPathEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textUri" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pathLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_path"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_path_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pathEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textUri" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_name"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_name_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/securityLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_security"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:helperText="@string/storage_edit_nfs_server_security_helper"
                        style="?textInputOutlinedExposedDropdownMenuStyle">

                        <AutoCompleteTextView
                            android:id="@+id/securityEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/clientCertificateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_client_certificate"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:helperText="@string/storage_edit_nfs_server_client_certificate_helper"
                        app:placeholderText="@string/storage_edit_nfs_server_client_certificate_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clientCertificateEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/uidLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_uid"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_id_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/uidEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gidLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_gid"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_id_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/gidEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/auxiliaryGidsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_auxiliary_gids"
                        app:errorEnabled="true"
                        app:expandedHintEnabled="false"
                        app:placeholderText="@string/storage_edit_nfs_server_auxiliary_gids_placeholder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/auxiliaryGidsEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/readOnlyCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-7dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/storage_edit_nfs_server_read_only" />

                    <TextView
                        android:id="@+id/maxConnectionsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAppearance="?textAppearanceListItem" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/maxConnectionsSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="4"
                        android:valueTo="32" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/storage_edit_nfs_server_max_connections_helper"
                        android:textAppearance="?textAppearanceListItemSecondary" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/connectionGrowthLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storage_edit_nfs_server_connection_growth"
                        app:expandedHintEnabled="false"
                        app:helperText="@string/storage_edit_nfs_server_connection_growth_helper"
                        style="?textInputOutlinedExposedDropdownMenuStyle">

                        <AutoCompleteTextView
                            android:id="@+id/connectionGrowthEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/useReadCacheCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-7dp"
                        android:layout_marginTop="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:checked="true"
                        android:text="@string/storage_edit_nfs_server_use_read_cache" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/storage_edit_nfs_server_use_read_cache_helper"
                        android:textAppearance="?textAppearanceListItemSecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/storage_edit_nfs_server_note"
                        android:textAppearance="?textAppearanceListItemSecondary" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingStart="@dimen/screen_edge_margin_minus_8dp"
            android:paddingEnd="@dimen/screen_edge_margin_minus_8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/removeOrAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/save"
                style="?buttonBarButtonStyle" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                style="?buttonBarButtonStyle" />

            <Button
                android:id="@+id/saveOrConnectAndAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="?buttonBarButtonStyle" />
        </LinearLayout>
    </me.zhanghai.android.files.ui.CoordinatorScrollingLinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
